--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
-    <link rel="stylesheet" href="style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
@@ -78,7 +77,7 @@ async function hitAPI(event){
             message: document.getElementById("subject").value
         }
         // const res = await axios.post("http://192.168.0.38:5000/contact", data);
-        const res = await axios.post("http://124.123.33.242/contact", data);
+        const res = await axios.post("https://124.123.33.242/contact", data);
         document.getElementById("fname").value = ''
         document.getElementById("lname").value = ''
         document.getElementById("country").value = ''
